# SYSU-Software

./: README.md
Backend/: .gitignore  IGemDetector.csproj  Program.cs  README.md  Startup.cs  appsettings.Development.json  appsettings.json  coco.names  yolov4-custom.cfg
Backend/Controllers/: ApiController.cs
Backend/Hubs/: BayesHub.cs
Backend/Models/: DbConfig.cs  DetectResult.cs  GeneNetRequest.cs  GeneNetResponse.cs  OcrResult.cs  YoloResult.cs
Backend/Properties/: launchSettings.json
Backend/Services/: GeneNet.cs  OcrDetector.cs  SimAndOpt.cs  YoloDetector.cs
Backend/bayes/: bayes.py
Backend/genenet/: GeneNetTF.py
Backend/simulation/: Genetic.py  optimize.py  sim_and_opt.py  solve.py
Backend/yolov4/: README.md  predict.py  requirements.txt  train.py  train_log.txt  video.py  yolo.py
Database/: README.md
Database/genenetDB/: genenetDB.sql
Database/roadmapDB/: roadmapDB.sql
Designer/: .eslintrc.yml  .gitignore  .proxyrc  package.json  tsconfig.json
Designer/src/: App.tsx  config.ts  index.html  index.scss  index.tsx
Search/GenenetSearch/: CMakeLists.txt  README.md
Search/GenenetSearch/include/: common.hpp  convert.hpp  entity.hpp  search.hpp  utility.hpp
Search/GenenetSearch/lib/: CMakeLists.txt  common.cpp  convert.cpp  entity.cpp  mysqlException.cpp  search.cpp
Search/GenenetSearch/src/: main.cpp
Search/GenenetSearch/testdata/: example-input  example-output.json  example-output.jsonc
Search/SearchAPI/: README.md  requirements.txt
Search/roadmapSearch/: .clang-format  CMakeLists.txt  README.md
Search/roadmapSearch/lib/: Activity.cpp  CMakeLists.txt  Component.cpp  ComponentDefinition.cpp  DAO.cpp  DesignGraph.cpp  Location.cpp  Sequence.cpp  SequenceAnnotation.cpp  common.cpp  mapping.cpp  search.cpp  utility.cpp
iGEM-CNN-Regression/: README.md  nohup.out  predict.ipynb  predict.py  predict_value.py  requirements.txt  running details.txt  train.py  train_log1-27.txt  train_log28-55.txt
iGEM-CNN-Regression/.ipynb_checkpoints/: LICENSE-checkpoint  README-checkpoint.md
iGEM-CNN-Regression/data_process/: all_tf.csv  data_process.py  (+4 more)
(+72 files in other folders)
